<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/idAndroidtITULO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/txt_gaseta_titulo"
                android:textSize="22sp"
                android:textStyle="bold" />



            <ImageView
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="7dp"
                android:src="@drawable/gas_icon">

            </ImageView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/idTxtGasolina"
                    android:layout_width="130dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="55dp"
                    android:gravity="center_vertical"
                    android:hint="@string/txt_gasolina"
                    android:inputType="numberDecimal"
                    android:paddingStart="8dp"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/idTxtEtanol"
                    android:layout_width="130dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="55dp"
                    android:gravity="center_vertical"
                    android:hint="@string/txt_etanol"
                    android:inputType="numberDecimal"
                    android:layout_marginEnd="8dp"
                    android:textSize="20sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/idAndroidBtnCalcular"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="141dp"
                    android:layout_marginEnd="141dp"
                    android:background="@drawable/botao_fundo_ciano"
                    android:text="@string/txt_botao_calcular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/idAndroidResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_resultado"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/idAndroidBtnLimp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/botao_fundo_ciano"
                android:text="@string/txt_botao_limpar" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/idAndroidBtnSal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/botao_fundo_ciano"
                android:enabled="false"
                android:text="@string/txt_botao_salvar" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/idAndroidBtnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/botao_fundo_ciano"
                android:text="@string/txt_botao_finalizar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>

